--- a/src/scss/_backdrop.scss
+++ b/src/scss/_backdrop.scss
@@ -92,9 +92,7 @@ In this file:
 
         align-content: center;
 
-        > * {
-            width: 100%;
-        }
+        align-items: stretch;
     }
 
     // Backdrop Stack Modifiers
